# lynx

./: .gitignore  pyproject.toml  pyrightconfig.json
.lynx/bash/: bash_script.sh
.lynx/batch/: batch_script.sh
.lynx/config/: sweep.yaml
.lynx/train/: bash_script.sh  batch_script.sh
cli/: main.py
cli/download/: __init__.py  download.py
cli/old/: main.py
cli/old/sweep/: __init__.py  sweep.py
cli/old/train/: train.py
cli/templates/: bash_script_template.sh.jinja
cli/train/: __init__.py  compile.py  deploy.py  sync.py  train.py
cli/train/templates/: bash_script_template.sh.jinja  batch_script_template.sh.jinja
lynx/agents/dqn/: demo.py  exp.py  main.py  new_config.py  sweep.py  train.py  trial.py
lynx/checkpoint/: __init__.py  checkpoint.py
lynx/configs/: dqn-tuned.yaml  dqn.yaml  sweep.yaml
lynx/configs/base/: dqn.yaml
lynx/configs/environment/: puzzle.yaml  sliding_tile.yaml  snake.yaml
lynx/configs/logger/: wandb.yaml
lynx/configs/network/: dqn.yaml
lynx/configs/slurm/: train.yaml
lynx/configs/sweep/: dqn.yaml
lynx/configs/train/: dqn.yaml
lynx/envs/factories/: factory.py
lynx/exp/: bash_script.sh  batch_script.sh
lynx/exp/config/: job_config.yaml
lynx/exp/fabfile/: compile.py  deploy.py  sync.py
lynx/exp/templates/: batch_script_template.sh.jinja
lynx/logger/: logger.py
lynx/networks/: actor.py  backbone.py  encoder.py  heads.py
lynx/old/logger/: logger.py
lynx/old/sweep/: bash_script.sh  batch_script.sh
lynx/sweep/: bash_script.sh  batch_script.sh  deploy.sh
lynx/sweep/config/: job_config.yaml  sweep_config.yaml  sweep_id.yaml
lynx/sweep/fabfile/: __init__.py  init.py  (+1 more)
lynx/test/: bash_script.sh  batch_script.sh  batch_script_compiler.py  init_sweep.py  logger.py  trial.py
lynx/types/: types.py
(+52 files in other folders)
